<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pokedex</string>

    <!--ToolsText-->
    <string name="toolsId">#0025</string>
    <string name="toolsPokemon">Pikachu</string>

    <!--dialogText-->
    <string name="dialogErrorText" tools:ignore="TypographyEllipsis">Ooops... ha habido un problema. \n \n Pruebe más tarde</string>

    <!--contentDescription-->
    <string name="cd_icon">Icon</string>
    <string name="cd_type">Type</string>

    <!--About fragment-->
    <string name="pokemonType">Tipo:</string>
    <string name="baby">Bebé</string>
    <string name="legendary">Legendario</string>
    <string name="mythical">Mítico</string>
    <string name="height">Altura:</string>
    <string name="weight">Peso:</string>
    <string name="habitat">Hábitat:</string>
    <string name="happiness">Felicidad:</string>
    <string name="captureRate">Tasa captura:</string>
    <string name="abilities">Habilidades:</string>

    <!--Stats fragment-->
    <string name="hpStat">Vida</string>
    <string name="attackStat">Ataque</string>
    <string name="defenseStat">Defensa</string>
    <string name="specialAttackStat">At. Esp.</string>
    <string name="specialDefenseStat">Df. Esp.</string>
    <string name="speedStat">Veloc.</string>
    <string name="baseExperience">Experiencia:</string>

    <!--Defenses fragment-->
    <string name="DamageX4">[x4] Muy débil contra …</string>
    <string name="DamageX2">[x2] Débil contra …</string>
    <string name="DamageX1">[x1] Daño normal contra …</string>
    <string name="DamageX05">[x0.5] Resistente contra …</string>
    <string name="DamageX025">[x0.25] Muy resistente contra …</string>
    <string name="DamageX0">[x0] Inmune contra …</string>

    <!--Evolution fragment-->
    <string name="level">Nivel:</string>
    <string name="item">Objeto:</string>
    <string name="timeOfDay">Tiempo:</string>
    <string name="location">Ubicación:</string>
</resources>