<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCard"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginVertical="2dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:textColor="@color/textList"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Id" />

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            tools:src="@drawable/ic_solrock"
            android:contentDescription="@string/cd_icon" />

        <TextView
            android:id="@+id/tvIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textList"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivIcon"
            tools:text="@string/toolsId" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textList"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvIdText"
            tools:text="@string/toolsPokemon" />

        <ImageView
            android:id="@+id/ivType1"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivType2"
            android:layout_marginEnd="12dp"
            tools:src="@drawable/ic_type_bug"
            android:contentDescription="@string/cd_type" />

        <ImageView
            android:id="@+id/ivType2"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="14dp"
            tools:src="@drawable/ic_type_fire"
            android:contentDescription="@string/cd_type" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>