<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.fragments.StatsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/hpStat"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHpStat"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressHpStat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/CustomProgressBarHP"
            android:indeterminate="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/attackStat"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAttackStat"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressAttackStat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/CustomProgressBarAttack"
            android:indeterminate="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/defenseStat"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDefenseStat"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressDefenseStat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/CustomProgressBarDefense"
            android:indeterminate="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/specialAttackStat"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSpecialAttackStat"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressSpecialAttackStat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/CustomProgressBarSpecialAttack"
            android:indeterminate="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/specialDefenseStat"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSpecialDefenseStat"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressSpecialDefenseStat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/CustomProgressBarSpecialDefense"
            android:indeterminate="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/speedStat"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSpeedStat"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressSpeedStat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/CustomProgressBarSpeed"
            android:indeterminate="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_gravity="center_vertical"
            android:text="@string/baseExperience"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBaseExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>